Fixes whitespace.

--- a/source/css/custom.less
+++ b/source/css/custom.less
@@ -184,6 +184,14 @@ blockquote > p:first-child {
   }
 
   /* Software, Education */
+
+  #education_list {
+    li {
+      &:first-child {
+        margin-top: 20px !important;
+      }
+    }
+  }
   
   #software_list, #education_list {
     li {
